--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@arcgis/map-components": "^4.33.11",
+    "@esri/calcite-components": "^3.2.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
